--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ html {
 
   font-size: 10px;
 
-  font-family: 'Verdana', Verdana;
+  font-family: 'Open-Sans', serif;
 
 }
 
@@ -48,7 +48,7 @@ body {
 
   margin: 0 auto;
 
-  background-color: #FF9500;
+  background-color: #0000FF;
 
   padding: 0 20px 20px 20px;
 
