--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ p, li {
 
 html {
 
-  background-color: #00539F;
+  background-color: #ffff00;
 
 }
 
@@ -48,7 +48,7 @@ body {
 
   margin: 0 auto;
 
-  background-color: #0000FF;
+  background-color: #ffff00;
 
   padding: 0 20px 20px 20px;
 
